# Termcolor_cpp

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  mainpage.dox
docs/: CHANGELOG.txt  Doxyfile  mainpage.dox  site_info
ide/clion/: CMakeLists.txt
site_info/: info
termcolor/: termcolor.cpp  termcolor.h
termcolor/include/: Color.h  Config.h  Constants.h  Functions.h  termcolor_Utils.h
termcolor/src/: Config.cpp  Functions.cpp
test/: main.cpp
